# sentimentAnalysis-NLP

./: .gitignore  README.md  pyproject.toml
Assessment/: instruction.docx
Assessment/data/: IMDB-movie-reviews.csv
output/: Model_1_-_DistilBERT_results.csv  Model_2_-_RoBERTa_Large_results.csv  benchmark_comparison.csv
src/: benchmark.py  models.py  sentiment_analysis.py  sentiment_analysis_fastapi.py  sentiment_analysis_gradio.py
