[project]
name = "sentimentanalysis-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "gradio>=6.5.1",
    "pandas>=3.0.0",
    "protobuf>=6.33.5",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
